<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uoc.pra1.ResultsActivity"
    >

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TableLayout
        android:id="@+id/product_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"

        >


        <TableRow

            android:layout_weight="1">

            <TextView

                android:layout_weight=".5"
                android:text="@string/card_price"


                android:textAppearance="@android:style/TextAppearance.Holo.Small"/>

            <TextView

                android:layout_weight=".5"
                android:text="@string/card_title"

                android:textAppearance="@android:style/TextAppearance.Holo.Small"
                />

        </TableRow>

        <TableRow

            android:layout_weight="1">

            <TextView
                android:layout_weight=".5"
                android:id="@+id/price"
                android:text="@string/card_price"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textColor="@color/colorAccent"/>


            <TextView
                android:layout_weight=".5"
                android:id="@+id/title"
                android:text="@string/card_title"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"/>


        </TableRow>



        <TableRow  android:layout_weight="1" >
            <TextView

                android:layout_weight="1"
                android:text="@string/card_image"

                android:textAppearance="@android:style/TextAppearance.Holo.Small"
                />

        </TableRow>

        <TableRow  android:layout_weight="1" >
            <ImageView
                android:id="@+id/thumbnail"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="150dip"
                android:scaleType="fitCenter"/>
        </TableRow>

        <TableRow  android:layout_weight="1" >
            <TextView

                android:layout_weight="1"
                android:text="@string/card_description"

                android:textAppearance="@android:style/TextAppearance.Holo.Small"
                />

        </TableRow>

        <TableRow  android:layout_weight="1" >
            <TextView
                android:id="@+id/description"
                android:layout_weight="1"
                android:text="@string/card_description"
                android:scrollbars="vertical"
                android:layout_height="150dip"
                android:textSize="20dp"
                />

        </TableRow>



    </TableLayout  >
</RelativeLayout>
